--- a/frontend/front-tpfinal/src/app/components/home/home.component.css
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.css
@@ -38,9 +38,10 @@
 /**
   CONTENIDO
 */
-.carousel-caption {
+.contenido-titulo {
   position: fixed;
-  top: 60%;
+  z-index: 1;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -56,5 +57,19 @@
   top: 0;
   right: 0;
   margin: 20px;
+  z-index: 1;
+}
+
+/**
+
+*/
+.overlay {
+  position: fixed;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
