--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -16,31 +16,28 @@
             <div class="carousel-item">
                 <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block w-100" alt="Fondo | RioNegro">
             </div>
-            
+
             <div class="carousel-item">
                 <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block w-100" alt="Fondo | SantaCruz">
             </div>
         </div>
     </div>
 
-    <div class="carousel-caption">
+    <div class="overlay"></div>
+
+    <div class="contenido-titulo">
         <h2>Pagina Turismo</h2>
 
         <p>Descripción</p>
     </div>
 
     <div class="corner-button">
-        <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            LOGIN
-        </button>
+        <a routerLink="/login" routerLinkActive="active" class="btn btn-outline-light me-2">
+            Sign In
+        </a>
 
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Sign In</a></li>
-
-            <li class="dropdown-divider"></li>
-
-            <li><a class="dropdown-item">Sign Up</a></li>
-        </ul>
-    </div>
+        <a routerLink="/login" routerLinkActive="active" class="btn btn-outline-info">
+            Sign Up
+        </a>
+    </div>    
 </div>
