--- a/frontend/front-tpfinal/src/app/components/resenias/resenia-servicio/resenia-servicio.component.html
+++ b/frontend/front-tpfinal/src/app/components/resenias/resenia-servicio/resenia-servicio.component.html
@@ -36,7 +36,7 @@
                           </ng-container>
                     </td>
                 </thead>
-                <button class="btn btn-danger mx-1" (click)="eliminar(resenia._id)"><i class="bi bi-trash3 mx-1">Eliminar</i></button>
+                <button *ngIf="tipo !== 'user'" class="btn btn-danger mx-1" (click)="eliminar(resenia._id)"><i class="bi bi-trash3 mx-1">Eliminar</i></button>
 
             </tbody>
         </table>
